--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li><a href="#"><h3>Contact</h3></a></li>
             </ul>
         </nav>
-        <h1></h1>
+        <h1>Mighty</h1>
         <h2>Your perfect moment starts with our coffee</h2>
     </header>
     
