--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h4>Ours coffees</h4>
         <section class="productos">
             <div class="card">
-                <div class="card-img"><img src="/Imagenes/Americano.png" alt=""><div class="img"></div></div>
+                <div class="card-img"><img src="Imagenes/Americano.png" alt=""><div class="img"></div></div>
                 <div class="card-title">Americano</div>
                 <hr class="card-divider">
                 <div class="card-footer">
