--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </div>
             </div>
             <div class="card">
-                <div class="card-img"><img src="/Imagenes/Brasil.png" alt=""><div class="img"></div></div>
+                <div class="card-img"><img src="Imagenes/Brasil.png" alt=""><div class="img"></div></div>
                 <div class="card-title">Brasil</div>
                 <hr class="card-divider">
                 <div class="card-footer">
@@ -51,7 +51,7 @@
                 </div>
             </div>
             <div class="card">
-                <div class="card-img"><img src="/Imagenes/Colombia.png" alt=""><div class="img"></div></div>
+                <div class="card-img"><img src="Imagenes/Colombia.png" alt=""><div class="img"></div></div>
                 <div class="card-title">Colombia</div>
                 <hr class="card-divider">
                 <div class="card-footer">
@@ -62,7 +62,7 @@
                 </div>
             </div>
             <div class="card">
-                <div class="card-img"><img src="/Imagenes/CostaRica.png" alt=""><div class="img"></div></div>
+                <div class="card-img"><img src="Imagenes/CostaRica.png" alt=""><div class="img"></div></div>
                 <div class="card-title">Costa Rica</div>
                 <hr class="card-divider">
                 <div class="card-footer">
@@ -73,7 +73,7 @@
                 </div>
             </div>
             <div class="card">
-                <div class="card-img"><img src="/Imagenes/Expresso.png" alt=""><div class="img"></div></div>
+                <div class="card-img"><img src="Imagenes/Expresso.png" alt=""><div class="img"></div></div>
                 <div class="card-title">Expresso Italiano</div>
                 <hr class="card-divider">
                 <div class="card-footer">
@@ -84,7 +84,7 @@
                 </div>
             </div>
             <div class="card">
-                <div class="card-img"><img src="/Imagenes/Latte.png" alt=""><div class="img"></div></div>
+                <div class="card-img"><img src="Imagenes/Latte.png" alt=""><div class="img"></div></div>
                 <div class="card-title">Latte</div>
                 <hr class="card-divider">
                 <div class="card-footer">
