--- a/index.html
+++ b/index.html
@@ -105,6 +105,6 @@
             <h5>&copy; 2024 Mighty. All rights reserved.</h5>
         </div>
     </footer>
-    <script src="/Codigo/script.js"></script>
+    <script src="Codigo/script.js"></script>
 </body>
 </html>
