--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </div>
             </div>
             <div class="card">
-                <div class="card-img"><img src="/Imagenes/Brasil.png" alt=""><div class="img"></div></div>
+                <div class="card-img"><img src="Imagenes/Brasil.png" alt=""><div class="img"></div></div>
                 <div class="card-title">Brasil</div>
                 <hr class="card-divider">
                 <div class="card-footer">
@@ -50,7 +50,7 @@
                 </div>
             </div>
             <div class="card">
-                <div class="card-img"><img src="/Imagenes/Colombia.png" alt=""><div class="img"></div></div>
+                <div class="card-img"><img src="Imagenes/Colombia.png" alt=""><div class="img"></div></div>
                 <div class="card-title">Colombia</div>
                 <hr class="card-divider">
                 <div class="card-footer">
@@ -61,7 +61,7 @@
                 </div>
             </div>
             <div class="card">
-                <div class="card-img"><img src="/Imagenes/CostaRica.png" alt=""><div class="img"></div></div>
+                <div class="card-img"><img src="Imagenes/CostaRica.png" alt=""><div class="img"></div></div>
                 <div class="card-title">Costa Rica</div>
                 <hr class="card-divider">
                 <div class="card-footer">
@@ -72,7 +72,7 @@
                 </div>
             </div>
             <div class="card">
-                <div class="card-img"><img src="/Imagenes/Expresso.png" alt=""><div class="img"></div></div>
+                <div class="card-img"><img src="Imagenes/Expresso.png" alt=""><div class="img"></div></div>
                 <div class="card-title">Expresso Italiano</div>
                 <hr class="card-divider">
                 <div class="card-footer">
@@ -83,7 +83,7 @@
                 </div>
             </div>
             <div class="card">
-                <div class="card-img"><img src="/Imagenes/Latte.png" alt=""><div class="img"></div></div>
+                <div class="card-img"><img src="Imagenes/Latte.png" alt=""><div class="img"></div></div>
                 <div class="card-title">Latte</div>
                 <hr class="card-divider">
                 <div class="card-footer">
