--- a/Cafes/Americano/americano.html
+++ b/Cafes/Americano/americano.html
@@ -14,7 +14,7 @@
             <ul>
                 <li>
                     <a href="/index.html">
-                        <img src="../Cafes/Imagenes/logo.png" alt="logo" class="logo">
+                        <img src="../logo.png" alt="logo" class="logo">
                     </a>
                 </li>
             </ul>
