--- a/Cafes/Americano/americano.html
+++ b/Cafes/Americano/americano.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mighty</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="/Imagenes/logo.png" type="image/png">
+    <link rel="icon" href="../../Imagenes/logo.png" type="image/png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
@@ -25,7 +25,7 @@
     <main>
         <article class="producto">
             <div class="column">
-                <img src="/Imagenes/Americano.png" alt="Americano Coffee">
+                <img src="../../Imagenes/Americano.png" alt="Americano Coffee">
             </div>
             <div class="info">
                 <h4>Americano</h4>
