--- a/Cafes/Americano/americano.html
+++ b/Cafes/Americano/americano.html
@@ -78,6 +78,6 @@
             <h5>&copy; 2024 Mighty. All rights reserved.</h5>
         </div>
     </footer>
-    <script src="/Codigo/script3.js"></script>
+    <script src="../../Codigo/script3.js"></script>
 </body>
 </html>
