--- a/Cafes/Colombiano/colombiano.html
+++ b/Cafes/Colombiano/colombiano.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mighty</title>
     <link rel="stylesheet" href="/Cafes/Colombiano/styles.css">
-    <link rel="icon" href="/Imagenes/logo.png" type="image/png">
+    <link rel="icon" href="../../Imagenes/logo.png" type="image/png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
@@ -13,8 +13,8 @@
         <nav>
             <ul>
                 <li>
-                    <a href="/index.html">
-                        <img src="/Imagenes/logo.png" alt="logo" class="logo">
+                    <a href="../../index.html">
+                        <img src="../../Imagenes/logo.png" alt="logo" class="logo">
                     </a>
                 </li>
             </ul>
@@ -25,7 +25,7 @@
     <main>
         <article class="producto">
             <div class="column">
-                <img src="/Imagenes/Colombia.png" alt="Americano Coffee">
+                <img src="../../Imagenes/Colombia.png" alt="Americano Coffee">
             </div>
             <div class="info">
                 <h4>Colombia</h4>
@@ -78,6 +78,6 @@
             <h5>&copy; 2024 Mighty. All rights reserved.</h5>
         </div>
     </footer>
-    <script src="/Codigo/script3.js"></script>
+    <script src="../../Codigo/script3.js"></script>
 </body>
 </html>
