--- a/Cafes/Latte/latte.html
+++ b/Cafes/Latte/latte.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mighty</title>
     <link rel="stylesheet" href="/Cafes/Latte/styles.css">
-    <link rel="icon" href="/Imagenes/logo.png" type="image/png">
+    <link rel="icon" href="../../Imagenes/logo.png" type="image/png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <script src="/Codigo/script3.js"></script>
+    <script src="../../Codigo/script3.js"></script>
 </head>
 <body>
     <header>
         <nav>
             <ul>
                 <li>
-                    <a href="/index.html">
-                        <img src="/Imagenes/logo.png" alt="logo" class="logo">
+                    <a href="../../index.html">
+                        <img src="../../Imagenes/logo.png" alt="logo" class="logo">
                     </a>
                 </li>
             </ul>
@@ -26,7 +26,7 @@
     <main>
         <article class="producto">
             <div class="column">
-                <img src="/Imagenes/Latte.png" alt="Americano Coffee">
+                <img src="../../Imagenes/Latte.png" alt="Americano Coffee">
             </div>
             <div class="info">
                 <h4>Latte</h4>
