--- a/Cafes/Colombiano/colombiano.html
+++ b/Cafes/Colombiano/colombiano.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mighty</title>
-    <link rel="stylesheet" href="/Cafes/Colombiano/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="../../Imagenes/logo.png" type="image/png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
