--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="/index.html"><img src="Imagenes/logo.png" alt="logo" class="logo"></a></li>
+                <li><a href="index.html"><img src="Imagenes/logo.png" alt="logo" class="logo"></a></li>
             </ul>
         </nav>
         <h1>Mighty</h1>
