--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mighty</title>
     <link rel="stylesheet" href="Codigo/styles.css">
-    <link rel="icon" href="logo.png" type="image/x-png">
+    <link rel="icon" href="Imagenes/logo.png" type="image/x-png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
